--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
                 <input type="text" class="form-control" id="address" placeholder="0xa50ff4747D9A3CAb3Ea17CfC6F9AbBd3Ca8b45D5">
             </div>
             <div class="d-grid gap-2 col-6 mx-auto">
-                <button class="btn btn-outline-success" type="button" onclick="check()">Button</button>
+                <button class="btn btn-outline-success" type="button" onclick="check()">Check Address</button>
               </div>
         </div>
       </div>
